--- a/html/lesson5/mini_douban.html
+++ b/html/lesson5/mini_douban.html
@@ -38,6 +38,7 @@
 </head>
 <body >
 
+
 <div class="container-fluid" style="height:50px;">
 <!-- 导航块 -->
 <div class="row ">
@@ -240,6 +241,8 @@
                         </a>
                       </div>
                     </div>
+
+
             </div>
 
 
@@ -278,6 +281,7 @@
                       </div>
                     </div>
             </div>
+
             </div>
             <!-- 电影分页 -->
             <div class="row ">
@@ -386,44 +390,47 @@
                       </div>
                     </div>
             </div>
+                        <div id="tv-3" class="row ">
+                    <div class="col-md-3" style="padding: 10px;">
+                      <div class="thumbnail text-center" style="margin: 0;">
+                        <a onclick="moreurl(this, {from:'mv_a_pst'})" href="https://movie.douban.com/subject/1652592/?from=showing">
+                          <img alt="300x200" src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2541240741.webp" />
+                          <h4>新喜剧之王 <span style="color: #e09015;">8.7</span></h4>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="col-md-3" style="padding: 10px;">
+                      <div class="thumbnail text-center" style="margin: 0;">
+                        <a onclick="moreurl(this, {from:'mv_a_pst'})" href="https://movie.douban.com/subject/1652592/?from=showing">
+                        <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2548870813.webp" alt="惊奇队长" rel="nofollow" class="">
+                          <h4>惊奇队长 <span style="color: #e09015;">8.7</span></h4>
+                        </a>
+                      </div>
+                    </div>
+
+
+            </div>
             <!-- 电视剧分页 -->
-            <div class="row ">
-                <div class="col-md-12 column text-center">
-                  <ul class="pagination">
-                    <li>
-                       <a href="#">Prev</a>
-                    </li>
-                    <li>
-                       <a href="#">1</a>
-                    </li>
-                    <li>
-                       <a href="#">2</a>
-                    </li>
-                    <li>
-                       <a href="#">3</a>
-                    </li>
-                    <li>
-                       <a href="#">4</a>
-                    </li>
-                    <li>
-                       <a href="#">5</a>
-                    </li>
-                    <li>
-                       <a href="#">Next</a>
-                    </li>
-                  </ul>
-                </div>
+            <div class="btn-group " style="text-align:center;">
+              <input type="button" class="btn btn-default start-slide" value="Start">
+              <input type="button" class="btn btn-default pause-slide" value="Pause">
+              <input type="button" class="btn btn-default prev-slide" value="Previous Slide">
+              <input type="button" class="btn btn-default slide-one" value="Slide 1">
+              <input type="button" class="btn btn-default slide-two" value="Slide 2">
+              <input type="button" class="btn btn-default slide-three" value="Slide 3">
+              <input type="button" class="btn btn-default next-slide" value="Next Slide">
+
             </div>
           </div>
           <!-- 推荐标题  -->
           <div id="gallery-frames">
            <!-- 轮播（Carousel）指标 -->
-            <div class="btn-group" style="float: right;text-align: right;">
-              <button type="button" data-target="#gallery-Carousel" data-slide="prev" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left"></span></button>
-              <button type="button" data-target="#gallery-Carousel" data-slide="next" class="btn btn-default"><span class="glyphicon glyphicon-chevron-right"></span></button>
-            </div>
-            <div class="row " style="padding-left: 20px;padding-top: 20px;height: 60px;">
+            <div style="padding-left: 20px;padding-top: 20px;height: 60px; display:inline-block;width:85%">
             <h4>热门推荐</h4>
+            </div>
+            <div style="display:inline-block;width:10%;">
+              <button type="button" class="btn btn-default prev-slide"><span class="glyphicon glyphicon-chevron-left"></span></button>
+              <button type="button" class="btn btn-default next-slide"><span class="glyphicon glyphicon-chevron-right"></span></button>
             </div>
             <!-- 推荐主题 -->
             <div class="row " style="background-color: #f0f3f5;" >
@@ -482,6 +489,16 @@
                       </div>
                   </div>
                 </div>
+            </div>
+            <div class="btn-group" style="text-align:center;">
+<!--               <input type="button" class="btn btn-default start-slide" value="Start">
+              <input type="button" class="btn btn-default pause-slide" value="Pause">
+              <input type="button" class="btn btn-default prev-slide" value="Previous Slide">
+              <input type="button" class="btn btn-default slide-one" value="Slide 1">
+              <input type="button" class="btn btn-default slide-two" value="Slide 2">
+              <input type="button" class="btn btn-default slide-three" value="Slide 3">
+              <input type="button" class="btn btn-default next-slide" value="Next Slide"> -->
+
             </div>
           </div>
             <!-- 影评 -->
@@ -560,4 +577,5 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <script src="my_carousel.js"></script>
   </body>
