--- a/html/lesson5/demo.html
+++ b/html/lesson5/demo.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>TributePage</title>
+    <title>Demo</title>
 
     <style >
     #tittle {
@@ -30,6 +30,20 @@
             background-image:none;
             background-repeat: repeat-x;
             filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
+    .circle{
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+    }
+
+    .circle ul li{
+      width: 10px;
+      height: 10px;
+      background: rgba(0,0,0,0.5);
+      border-radius: 50%;
+      float: left;
+      margin-right: 10px;
+    }
 
     </style>
     <script>
@@ -37,6 +51,7 @@
     </script>
 </head>
 <body >
+
 <div class="container-fluid" style="height:50px;">
 <!-- 电视剧主题 -->
         <div id="tv-frames" class="row ">
@@ -46,68 +61,8 @@
             </div>
             <div id="gallery-Carousel" class="carousel slide carousel-inner">
                   <!-- 轮播（Carousel）项目 -->
-                  <div class="carousel-inner">
-                    <div class="item active">
-                            <!-- 电视剧缩略图 -->
-                            <div id="tv-1" class="row ">
-
-                            </div>
-
-                            <div id="tv-2" class="row ">
-                                    <div class="col-md-3" style="padding: 10px;">
-                                      <div class="thumbnail text-center" style="margin: 0;">
-                                        <a onclick="moreurl(this, {from:'mv_a_pst'})" href="https://movie.douban.com/subject/1652592/?from=showing">
-                                          <img alt="300x200" src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2541240741.webp" />
-                                          <h4>新喜剧之王 <span style="color: #e09015;">8.7</span></h4>
-                                        </a>
-                                      </div>
-                                    </div>
-                                    <div class="col-md-3" style="padding: 10px;">
-                                      <div class="thumbnail text-center" style="margin: 0;">
-                                        <a onclick="moreurl(this, {from:'mv_a_pst'})" href="https://movie.douban.com/subject/1652592/?from=showing">
-                                        <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2548870813.webp" alt="惊奇队长" rel="nofollow" class="">
-                                          <h4>惊奇队长 <span style="color: #e09015;">8.7</span></h4>
-                                        </a>
-                                      </div>
-                                    </div>
-                                    <div class="col-md-3" style="padding: 10px;">
-                                      <div class="thumbnail text-center" style="margin: 0;">
-                                        <a onclick="moreurl(this, {from:'mv_a_pst'})" href="https://movie.douban.com/subject/1652592/?from=showing">
-                                        <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2545472803.webp" alt="流浪地球" rel="nofollow" class="">
-                                          <h4>流浪地球 <span style="color: #e09015;">8.7</span></h4>
-                                        </a>
-
-                                      </div>
-                                    </div>
-                                    <div class="col-md-3" style="padding: 10px;">
-                                      <div class="thumbnail text-center" style="margin: 0;">
-                                        <a onclick="moreurl(this, {from:'mv_a_pst'})" href="https://movie.douban.com/subject/1652592/?from=showing">
-                                        <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2546335362.webp" style="width: 94%;" alt="驯龙高手3" rel="nofollow" class="">
-                                          <h4>驯龙高手3 <span style="color: #e09015;">8.7</span></h4>
-                                        </a>
-                                      </div>
-                                    </div>
-                            </div>
-                                        <div id="tv-3" class="row ">
-                                    <div class="col-md-3" style="padding: 10px;">
-                                      <div class="thumbnail text-center" style="margin: 0;">
-                                        <a onclick="moreurl(this, {from:'mv_a_pst'})" href="https://movie.douban.com/subject/1652592/?from=showing">
-                                          <img alt="300x200" src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2541240741.webp" />
-                                          <h4>新喜剧之王 <span style="color: #e09015;">8.7</span></h4>
-                                        </a>
-                                      </div>
-                                    </div>
-                                    <div class="col-md-3" style="padding: 10px;">
-                                      <div class="thumbnail text-center" style="margin: 0;">
-                                        <a onclick="moreurl(this, {from:'mv_a_pst'})" href="https://movie.douban.com/subject/1652592/?from=showing">
-                                        <img src="https://img3.doubanio.com/view/photo/s_ratio_poster/public/p2548870813.webp" alt="惊奇队长" rel="nofollow" class="">
-                                          <h4>惊奇队长 <span style="color: #e09015;">8.7</span></h4>
-                                        </a>
-                                      </div>
-                                    </div>
-
-
-                            </div>
+                  <div id="tv-1" class="carousel-inner">
+                  </div>
                             <!-- 电视剧分页 -->
                             <div class="btn-group " style="text-align:center;">
                               <input type="button" class="btn btn-default start-slide" value="Start">
@@ -117,10 +72,26 @@
                               <input type="button" class="btn btn-default slide-two" value="Slide 2">
                               <input type="button" class="btn btn-default slide-three" value="Slide 3">
                               <input type="button" class="btn btn-default next-slide" value="Next Slide">
-
-                            </div>
+                                 <!-- 轮播（Carousel）指标 -->
+                            <ol class="carousel-indicators text-primary">
+                                <li data-target="#gallery-Carousel" data-slide-to="0" class="active"></li>
+                                <li data-target="#gallery-Carousel" data-slide-to="1"></li>
+                                <li data-target="#gallery-Carousel" data-slide-to="2"></li>
+                            </ol>
+                            <div class="circle" id='cicle'>
+                                <ul>
+                                  <li class='current'></li>
+                                  <li></li>
+                                  <li></li>
+                                  <li></li>
+                                  <li></li>
+                                </ul>
+                              </div>
                           </div>
+                  </div>
 </div>
+</div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
