--- a/html/lesson7/game.html
+++ b/html/lesson7/game.html
@@ -28,17 +28,18 @@
         }
         div.paw {
             width: 100px;
-            height: 100px;
-            background: url('images/paw.png') no-repeat;
-            background-size: 100px 100px;
+            height: 708px;
+            background: url('images/paw_open1.png') no-repeat;
+            background-size: 100px 708px;
             background-position: -10px -10px;
             margin:0 auto;
             overflow: hidden;
             position: absolute;
             padding-left:10px;
-            top: 0px;
+            top: -630px;
             left: 0px;
         }
+
         div.win {
             width: 200px;
             height: 200px;
@@ -89,7 +90,9 @@
     <div ><center><h1>夹娃娃</h1></center></div>
     <div class="screen">
         <div id="paw" class="paw">
-        </div>
+
+        </div> <div id="line" class="line">
+            </div>
     </div>
     <div class="controller" style="margin:0 auto;text-align:center">
         <button type="" id="moveL"  ></button>
