--- a/html/lesson5/mini_douban_v1.html
+++ b/html/lesson5/mini_douban_v1.html
@@ -754,9 +754,9 @@ a {
 </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-    <script src="my_carousel.js"></script>
-    <script src="tv_div_generation.js" ></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/my_carousel.js"></script>
+    <script src="js/div_generation.js" ></script>
 </body>
